Change image length and width to 500 pixels

--- a/recipes/carrotcake.html
+++ b/recipes/carrotcake.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Carrot Cake</h1>
-    <img src="../img/CarrotCake.webp" alt="Carrot Cake">
+    <img src="../img/CarrotCake.webp" alt="Carrot Cake" length="500px" width="500px">
 </body>
 </html>
