--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/carrotcake.html">Carrot Cake</a>
+    <ul>
+        <li><a href="./recipes/carrotcake.html">Carrot Cake</a></li>
+        <li><a href="./recipes/chicken-makhani.html">Chicken Makhani</a></li>
+        <li></li>
+    </ul>
+    
 </body>
 </html>
