--- a/recipes/chicken-makhani.html
+++ b/recipes/chicken-makhani.html
@@ -8,5 +8,10 @@
 <body>
     <h1>Chicken Makhani</h1>
     <img src="../img/chicken-makhani.webp" alt="" width="500px" length="500px">
+
+    <h3>Chicken Makhani (Indian Butter Chicken)</h3>
+    <p>This butter chicken recipe, or chicken makhani, is one of my favorite Indian dishes. It features a full-flavored sauce that complements the chicken well. It can be made as mild or spicy as you wish by adjusting the cayenne. Serve with basmati rice and naan bread.</p>
+
+    
 </body>
 </html>
