--- a/recipes/chicken-makhani.html
+++ b/recipes/chicken-makhani.html
@@ -12,6 +12,27 @@
     <h3>Chicken Makhani (Indian Butter Chicken)</h3>
     <p>This butter chicken recipe, or chicken makhani, is one of my favorite Indian dishes. It features a full-flavored sauce that complements the chicken well. It can be made as mild or spicy as you wish by adjusting the cayenne. Serve with basmati rice and naan bread.</p>
 
-    
+    <h3>Ingredients</h3>
+    <ul>
+        <li>2 tablespoons peanut oil, divided</li>
+        <li>1 shallot, finely chopped</li>
+        <li>¼ white onion, chopped</li>
+        <li>2 tablespoons butter</li>
+        <li>1 tablespoon ginger garlic paste</li>
+        <li>2 teaspoons lemon juice</li>
+        <li>2 teaspoons garam masala, divided</li>
+        <li>1 teaspoon chili powder</li>
+        <li>1 teaspoon ground cumin</li>
+        <li>1 bay leaf</li>
+        <li>1 cup tomato puree</li>
+        <li>1 cup half-and-half</li>
+        <li>¼ cup plain yogurt</li>
+        <li>1 pinch salt and ground black pepper to taste</li>
+        <li>1 pound boneless, skinless chicken thighs, cut into bite-size pieces</li>
+        <li>¼ teaspoon cayenne pepper, or to taste</li>
+        <li>1 tablespoon cornstarch</li>
+        <li>¼ cup water</li>
+    </ul>
+
 </body>
 </html>
