--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li><a href="./recipes/carrotcake.html">Carrot Cake</a></li>
         <li><a href="./recipes/chicken-makhani.html">Chicken Makhani</a></li>
-        <li><a href="./recipes/pizza.html"></a>Pizza</li>
+        <li><a href="./recipes/pizza.html">Pizza</a></li>
     </ul>
     
 </body>
