Add description in pizza.html

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Pizza</h1>
     <img src="../img/Pizza.webp" alt="Pizza">
+
+    <h3>Thin-Crust Pizza Dough</h3>
+    <p>This thin-crust pizza dough recipe is ready to bake in just 15 minutes with deliciously crisp results.</p>
 </body>
 </html>
