Add ingredients in pizza.html

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -11,5 +11,13 @@
 
     <h3>Thin-Crust Pizza Dough</h3>
     <p>This thin-crust pizza dough recipe is ready to bake in just 15 minutes with deliciously crisp results.</p>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Yeast</li>
+        <li>Sugar and water</li>
+        <li>Flour</li>
+        <li>Salt</li>
+    </ul>
 </body>
 </html>
