--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -19,5 +19,15 @@
         <li>Flour</li>
         <li>Salt</li>
     </ul>
+
+    <h3>Directions</h3>
+    <ol>
+        <li>Gather all ingredients. </li>
+        <li>Dissolve yeast and sugar in warm water that's 110 degrees F (44 degrees C) in a small bowl. Let stand until yeast softens and begins to form a creamy foam, about 5 to 8 minutes. </li>
+        <li>Combine 1 3/4 cups flour and salt in a large bowl. Pour in yeast mixture; mix well until dough comes together. </li>
+        <li>Transfer dough to a floured surface and knead until smooth, about 2 minutes. Add remaining 1/4 cup flour if dough is too sticky. </li>
+        <li>Roll dough into a 12-inch circle. Transfer to a greased pizza pan. </li>
+        <li>Add your favorite toppings, and bake. Enjoy! </li>
+    </ol>
 </body>
 </html>
