Add div to image and add stylesheet link for css

--- a/recipes/carrotcake.html
+++ b/recipes/carrotcake.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Carrot Cake</title>
 </head>
 <body>
     <h1>Carrot Cake</h1>
-    <img src="../img/CarrotCake.webp" alt="Carrot Cake" length="500px" width="500px">
-
+    <div>
+        <img src="../img/CarrotCake.webp" alt="Carrot Cake" length="500px" width="500px">
+    </div>
+    
     <h3>Description</h3>
-    <p>This carrot cake recipe with a homemade cream cheese frosting is my favorite, and I have tried many carrot cakes! It's moist, easy to make with grated carrots, and so delicious! Our top-rated carrot cake recipe is moist, light, fluffy, and topped with a rich cream cheese frosting. What's not to love?</p>
+    <p>This carrot cake recipe with a homemade cream cheese frosting is my favorite, and I have tried many carrot cakes!</p>
+    <p>It's moist, easy to make with grated carrots, and so delicious!</p> 
+    <p>Our top-rated carrot cake recipe is moist, light, fluffy, and topped with a rich cream cheese frosting. What's not to love?</p>
 
     <h3>Ingredients</h3>
     <ul>
