--- a/recipes/chicken-makhani.html
+++ b/recipes/chicken-makhani.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Chicken Makhani</title>
 </head>
 <body>
     <h1>Chicken Makhani</h1>
-    <img src="../img/chicken-makhani.webp" alt="" width="500px" length="500px">
-
-    <h3>Chicken Makhani (Indian Butter Chicken)</h3>
+    <div>
+        <img src="../img/chicken-makhani.webp" alt="" width="500px" length="500px">
+    </div>
+    
+    <h3 style="text-align: center; width: 100%;">Chicken Makhani (Indian Butter Chicken)</h3>
     <p>This butter chicken recipe, or chicken makhani, is one of my favorite Indian dishes. It features a full-flavored sauce that complements the chicken well. It can be made as mild or spicy as you wish by adjusting the cayenne. Serve with basmati rice and naan bread.</p>
 
     <h3>Ingredients</h3>
@@ -25,7 +28,7 @@
         <li>1 teaspoon ground cumin</li>
         <li>1 bay leaf</li>
         <li>1 cup tomato puree</li>
-        <li>1 cup half-and-half</li>
+        <li>1 cup half-and-half</li> 
         <li>¼ cup plain yogurt</li>
         <li>1 pinch salt and ground black pepper to taste</li>
         <li>1 pound boneless, skinless chicken thighs, cut into bite-size pieces</li>
@@ -34,7 +37,7 @@
         <li>¼ cup water</li>
     </ul>
 
-    <h3>Directions</h3>
+    <h3 >Directions</h3>
     <ol>
         <li>Heat 1 tablespoon oil in a large saucepan over medium-high heat. Sauté shallot and onion until soft and translucent, about 5 minutes. </li>
         <li>Stir in butter, ginger-garlic paste, lemon juice, 1 teaspoon garam masala, chili powder, cumin, and bay leaf. Cook and stir for 1 minute. Add tomato sauce, and cook for 2 minutes, continuing to frequently stir. </li>
