--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
@@ -10,7 +11,7 @@
     <ul>
         <li><a href="./recipes/carrotcake.html">Carrot Cake</a></li>
         <li><a href="./recipes/chicken-makhani.html">Chicken Makhani</a></li>
-        <li><a href="./recipes/pizza.html">Pizza</a></li>
+        <li><a href="./recipes/pizza.html">Pizza</a></li>   
     </ul>
     
 </body>
