--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Pizza</title>
 </head>
 <body>
     <h1>Pizza</h1>
-    <img src="../img/Pizza.webp" alt="Pizza">
+    <div>
+      <img src="../img/Pizza.webp" alt="Pizza">
+    </div>
 
     <h3>Thin-Crust Pizza Dough</h3>
     <p>This thin-crust pizza dough recipe is ready to bake in just 15 minutes with deliciously crisp results.</p>
