--- a/recipes/carrotcake.html
+++ b/recipes/carrotcake.html
@@ -12,7 +12,7 @@
         <img src="../img/CarrotCake.webp" alt="Carrot Cake" length="500px" width="500px">
     </div>
     
-    <h3>Description</h3>
+    <h3 style="text-align: center; width: 100%;">Description</h3>
     <p>This carrot cake recipe with a homemade cream cheese frosting is my favorite, and I have tried many carrot cakes!</p>
     <p>It's moist, easy to make with grated carrots, and so delicious!</p> 
     <p>Our top-rated carrot cake recipe is moist, light, fluffy, and topped with a rich cream cheese frosting. What's not to love?</p>
