--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -12,7 +12,7 @@
       <img src="../img/Pizza.webp" alt="Pizza">
     </div>
 
-    <h3>Thin-Crust Pizza Dough</h3>
+    <h3 style="text-align: center; width: 100%;">Thin-Crust Pizza Dough</h3>
     <p>This thin-crust pizza dough recipe is ready to bake in just 15 minutes with deliciously crisp results.</p>
 
     <h3>Ingredients</h3>
