Modify links and add images and containers

--- a/index.html
+++ b/index.html
@@ -8,10 +8,23 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/carrotcake.html">Carrot Cake</a></li>
-        <li><a href="./recipes/chicken-makhani.html">Chicken Makhani</a></li>
-        <li><a href="./recipes/pizza.html">Pizza</a></li>   
+    <ul id="main-list">
+        <div class="top-container">
+            <div class="carrotcake-container">
+                <li><a href="./recipes/carrotcake.html">Carrot Cake</li>
+                <img src="./img/CarrotCake.webp" alt="Carrot Cake" class="index-img"></a>
+            </div>
+
+            <div class="chicken-container">
+                <li><a href="./recipes/chicken-makhani.html">Chicken Makhani</li>
+                <img src="./img/chicken-makhani.webp" alt="Chicken Makhani" class="index-img"></a>
+            </div>
+        </div>
+        
+        <div class="bot-container">
+            <li><a href="./recipes/pizza.html">Pizza</li>   
+            <img src="./img/Pizza.webp" alt="Pizza" class="index-img"></a>
+        </div>
     </ul>
     
 </body>
