--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -7,30 +7,36 @@
     <title>Pizza</title>
 </head>
 <body>
-    <h1>Pizza</h1>
-    <div>
-      <img src="../img/Pizza.webp" alt="Pizza">
+    <div class="container">
+        <h1>Pizza</h1>
+        <img src="../img/Pizza.webp" alt="Pizza" class="recipes-imgs">
+  
+        <div class="head-container">
+            <h3 class="description">Thin-Crust Pizza Dough</h3>
+            <p>This thin-crust pizza dough recipe is ready to bake in just 15 minutes with deliciously crisp results.</p>
+        </div>
+  
+        <div class="ing-container">
+            <h3>Ingredients</h3>
+            <ul>
+                <li>Yeast</li>
+                <li>Sugar and water</li>
+                <li>Flour</li>
+                <li>Salt</li>
+            </ul>
+        </div>
+   
+        <div class="direction-container">
+            <h3>Directions</h3>
+            <ol>
+                <li>Gather all ingredients. </li>
+                <li>Dissolve yeast and sugar in warm water that's 110 degrees F (44 degrees C) in a small bowl. Let stand until yeast softens and begins to form a creamy foam, about 5 to 8 minutes. </li>
+                <li>Combine 1 3/4 cups flour and salt in a large bowl. Pour in yeast mixture; mix well until dough comes together. </li>
+                <li>Transfer dough to a floured surface and knead until smooth, about 2 minutes. Add remaining 1/4 cup flour if dough is too sticky. </li>
+                <li>Roll dough into a 12-inch circle. Transfer to a greased pizza pan. </li>
+                <li>Add your favorite toppings, and bake. Enjoy! </li>
+            </ol>
+        </div>
     </div>
-
-    <h3 style="text-align: center; width: 100%;">Thin-Crust Pizza Dough</h3>
-    <p>This thin-crust pizza dough recipe is ready to bake in just 15 minutes with deliciously crisp results.</p>
-
-    <h3>Ingredients</h3>
-    <ul>
-        <li>Yeast</li>
-        <li>Sugar and water</li>
-        <li>Flour</li>
-        <li>Salt</li>
-    </ul>
-
-    <h3>Directions</h3>
-    <ol>
-        <li>Gather all ingredients. </li>
-        <li>Dissolve yeast and sugar in warm water that's 110 degrees F (44 degrees C) in a small bowl. Let stand until yeast softens and begins to form a creamy foam, about 5 to 8 minutes. </li>
-        <li>Combine 1 3/4 cups flour and salt in a large bowl. Pour in yeast mixture; mix well until dough comes together. </li>
-        <li>Transfer dough to a floured surface and knead until smooth, about 2 minutes. Add remaining 1/4 cup flour if dough is too sticky. </li>
-        <li>Roll dough into a 12-inch circle. Transfer to a greased pizza pan. </li>
-        <li>Add your favorite toppings, and bake. Enjoy! </li>
-    </ol>
 </body>
 </html>
